<resources>
    <string name="app_name">FirebaseLogin</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="_65_25">65+25</string>
    <string name="_6755">=6755</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtract">-</string>
    <string name="allclear">AC</string>
    <string name="_0">0</string>
    <string name="decimel">.</string>
    <string name="equals">=</string>
    <string name="logout">Logout</string>
    <string name="create_user">Create User</string>
    <string name="back_to_main">Back to Main</string>
    <string name="role">Role</string>
    <string name="back">Back</string>

    <!-- New strings for Budget Setting -->
    <string name="select_category">Select Category</string>
    <string name="enter_budget">Enter Budget Amount</string>
    <string name="select_timeframe">Select Timeframe</string>
    <string name="save_budget">Save Budget</string>
    <string name="reset_budget">Reset Budget</string>
    <string name="budget_settings">Budget Settings</string>
    <string name="splash_screen">splash screen</string>

    <string-array name="expense_categories">
        <item>Groceries</item>
        <item>Rent</item>
        <item>Utilities</item>
        <item>Transportation</item>
        <item>Entertainment</item>
        <item>Dining</item>
        <item>Healthcare</item>
        <item>Education</item>
        <item>Others</item>
    </string-array>

    <string-array name="user_roles">
        <item>viewer</item>
        <item>editor</item>
        <item>admin</item> <!-- Added admin role -->
    </string-array>

    <!-- New array for timeframes -->
    <string-array name="timeframes">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
