<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">


    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="922dp"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="28sp"
        android:text="@string/_65_25"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textSize="28sp"
        android:visibility="gone"
        android:text="@string/_6755"
        android:textColor="#5F5D5D"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"
        app:layout_constraintBottom_toBottomOf="@+id/result_tv" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operatorButton"
                android:onClick="onClearClick"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/operatorButton"
                android:text=""
                android:onClick="onBackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorButton"
                android:onClick="onOperatorClick"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allclear"
                style="@style/operatorButton"
                android:onClick="onAllclearClick"
                android:text="@string/allclear"
                android:textSize="21sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/decimel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/operatorButton"
                android:onClick="onEqualClick"
                android:text="@string/equals" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>